--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "googleapis": "^100.0.0",
     "ws": "^8.5.0"
   },
   "devDependencies": {
