--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     ]
   },
   "devDependencies": {
+    "chokidar": "^3.6.0",
     "eslint": "^8.14.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
