--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,9 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/styled-components": "^5.1.34",
     "chokidar": "^3.6.0",
     "eslint": "^8.14.0",
     "eslint-config-standard": "^17.0.0",
